--- a/repository.yml
+++ b/repository.yml
@@ -1,5 +1,5 @@
 ---
 
-name: Fmartinou add-ons
-url: https://github.com/fmartinou/hassio-addons
-maintainer: fmartinou
+name: fat115 add-ons
+url: https://github.com/fat115/hassio-addons
+maintainer: fat115
